test/types/void/void-field-1.good
void-field-1.chpl:2: error: Field 'a' cannot be declared 'void'. Consider using 'nothing' instead.
