test/types/void/void-field-1.chpl
record r {
  var a : void;
}
